// ini adalah bahasa yang digunakan
syntax = "proto3";

// ini untuk menentukan di mana hasil generate file .proto akan disimpan,
// jika kita tidak menggunakan ini maka hasil generate berada di folder
// yang ditentukan pada keyword 'package' yang mana pada file ini berarti proto
option go_package = "./pb";

// ini optional, biasanya digunakan ketika ada lebih dari satu .proto file
package proto;

service Movie {
    rpc GetMovies (Empty) returns (stream MovieInfo);
    rpc GetMovie (Id) returns (MovieInfo);
    rpc CreateMovie (MovieInfo) returns (Id);
    rpc UpdateMovie (MovieInfo) returns (Status);
    rpc DeleteMovie (Id) returns (Status);
}

message Empty {}

message MovieInfo {
    string id = 1;
    string isbn = 2;
    string title = 3;
    Director director = 4;
}

message Director {
    string firstname = 1;
    string lastname = 2;
}

message Id {
    string value = 1;
}

message Status {
    int32 value = 1;
}